@@ -72,11 +72,11 @@ currently applied cluster settings.
 ::
 
     cr> select settings from sys.cluster;
-    +--------------------------------------------------------------------------------------------------------------------------------------------------------------------...-+
-    | settings                                                                                                                                                               |
-    +--------------------------------------------------------------------------------------------------------------------------------------------------------------------...-+
-    | {"bulk": {...}, "cluster": {...}, "discovery": {...}, "gateway": {...}, "indices": {...}, "license": {...}, "logger": [], "psql": {...}, "stats": {...}, "udc": {...}} |
-    +--------------------------------------------------------------------------------------------------------------------------------------------------------------------...-+
+    +-----------------------------------------------------------------------------------------------------------------------------------------------------...-+
+    | settings                                                                                                                                                |
+    +-----------------------------------------------------------------------------------------------------------------------------------------------------...-+
+    | {"bulk": {...}, "cluster": {...}, "discovery": {...}, "gateway": {...}, "indices": {...}, "license": {...}, "logger": [], "stats": {...}, "udc": {...}} |
+    +-----------------------------------------------------------------------------------------------------------------------------------------------------...-+
     SELECT 1 row in set (... sec)
 
 ::
@@ -167,9 +167,6 @@ currently applied cluster settings.
     | settings['logger']                                                                | object_array |
     | settings['logger']['level']                                                       | string       |
     | settings['logger']['name']                                                        | string       |
-    | settings['psql']                                                                  | object       |
-    | settings['psql']['enabled']                                                       | boolean      |
-    | settings['psql']['port']                                                          | string       |
     | settings['stats']                                                                 | object       |
     | settings['stats']['breaker']                                                      | object       |
     | settings['stats']['breaker']['log']                                               | object       |
